# basic_icon_switcher

./: CHANGELOG.md  README.md  pubspec.yaml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
android/: build.gradle
example/: pubspec.yaml
example/lib/: main.dart
ios/: basic_icon_switcher.podspec  icon_switcher.podspec
ios/Classes/: SwiftIconSwitcherPlugin.swift
ios/basic_icon_switcher/: Package.swift
lib/: basic_icon_switcher.dart  basic_icon_switcher_web.dart  icon_switcher.dart  icon_switcher_web.dart  mobile_icon_switcher.dart
lib/src/: basic_icon_switcher_method_channel.dart  basic_icon_switcher_platform_interface.dart  basic_icon_switcher_web.dart  basic_icon_switcher_web_stub.dart  exceptions.dart  icon_configuration.dart  icon_switcher_method_channel.dart  icon_switcher_platform_interface.dart  icon_switcher_web.dart  icon_switcher_web_stub.dart
linux/: CMakeLists.txt  basic_icon_switcher_plugin.cc  icon_switcher_plugin.cc
macos/: basic_icon_switcher.podspec  icon_switcher.podspec
macos/Classes/: IconSwitcherPlugin.swift
macos/basic_icon_switcher/: Package.swift
test/: basic_icon_switcher_test.dart  icon_switcher_test.dart  mobile_icon_switcher_test.dart
windows/: CMakeLists.txt  basic_icon_switcher_plugin.cpp  basic_icon_switcher_plugin.h  basic_icon_switcher_plugin_c_api.cpp  icon_switcher_plugin.cpp  icon_switcher_plugin.h  icon_switcher_plugin_c_api.cpp
windows/include/basic_icon_switcher/: basic_icon_switcher_plugin_c_api.h
windows/include/icon_switcher/: icon_switcher_plugin_c_api.h
(+10 files in other folders)
